--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -15,11 +15,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
-        <include
-            layout="@layout/login_content"
+        <FrameLayout
+            android:id="@+id/login_content"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/view_margin_normal"
             android:layout_weight="1" />
     </LinearLayout>
     <include layout="@layout/login_cloud"/>
