--- a/app/src/main/res/layout/activity_workorder_creator.xml
+++ b/app/src/main/res/layout/activity_workorder_creator.xml
@@ -141,7 +141,7 @@
 
                 <ImageView
                     android:id="@+id/image_worker"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="0.3"
