--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,45 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:id="@+id/layout_container">
 
-    <include layout="@layout/toolbar"/>
+   <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+       <include layout="@layout/toolbar"/>
 
-    <LinearLayout
-        android:id="@+id/linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <com.xseec.eds.widget.MySpinner
-            android:id="@+id/spinner_time_type"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:layout_margin="@dimen/view_margin_small"
-            android:entries="@array/query_time" />
+       <LinearLayout
+           android:id="@+id/linear_layout"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           >
+           <com.xseec.eds.widget.MySpinner
+               android:id="@+id/spinner_time_type"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_weight="2"
+               android:layout_margin="@dimen/view_margin_small"
+               android:entries="@array/query_time" />
 
-        <TextView
-            android:id="@+id/text_time_type"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:layout_margin="@dimen/view_margin_small"
-            android:gravity="center"
-            android:textSize="@dimen/font_normal"
-            />
-    </LinearLayout>
+           <TextView
+               android:id="@+id/text_time_type"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_weight="3"
+               android:layout_margin="@dimen/view_margin_small"
+               android:gravity="center"
+               android:textSize="@dimen/font_normal"
+               />
+       </LinearLayout>
 
-    <include layout="@layout/item_progress"/>
+       <include layout="@layout/item_progress"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+       <android.support.v7.widget.RecyclerView
+           android:id="@+id/recycler"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+       </android.support.v7.widget.RecyclerView>
+   </LinearLayout>
+</FrameLayout>
