--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -21,6 +21,9 @@
             android:icon="@drawable/nav_action"/>
     </group>
     <group android:id="@+id/group_others">
+        <item android:id="@+id/nav_users"
+            android:title="@string/nav_user"
+            android:icon="@drawable/ic_users_manage"/>
         <item android:id="@+id/nav_setting"
             android:title="@string/nav_setting"
             android:icon="@drawable/nav_customize"/>
