--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,98 +7,10 @@
 
     <include layout="@layout/toolbar" />
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout style="@style/LinearHorBigSpace">
-
-                <TextView
-                    style="@style/TextHorItemName"
-                    android:drawableLeft="@drawable/ic_building_blue_700_24dp"
-                    android:text="@string/setting_area" />
-
-                <EditText
-                    android:id="@+id/edit_area"
-                    style="@style/TextHorItemValue" />
-            </LinearLayout>
-
-            <LinearLayout style="@style/LinearHorBigSpace">
-
-                <TextView
-                    style="@style/TextHorItemName"
-                    android:drawableLeft="@drawable/ic_account_circle_blue_700_24dp"
-                    android:text="@string/overview_engineer" />
-
-                <EditText
-                    android:id="@+id/edit_engineer"
-                    style="@style/TextHorItemValue" />
-            </LinearLayout>
-
-            <LinearLayout style="@style/LinearHorBigSpace">
-
-                <TextView
-                    style="@style/TextHorItemName"
-                    android:drawableLeft="@drawable/ic_location_on_blue_700_24dp"
-                    android:text="@string/overview_location" />
-
-                <EditText
-                    android:id="@+id/edit_location"
-                    style="@style/TextHorItemValue" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/view_margin_normal"
-                android:layout_marginVertical="@dimen/view_margin_small"
-                android:gravity="center_vertical"
-                android:drawableLeft="@drawable/ic_image_blue_700_24dp"
-                android:text="@string/overview_grid" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/view_margin_normal"
-                android:layout_marginVertical="@dimen/view_margin_small" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/view_margin_normal"
-                android:layout_marginVertical="@dimen/view_margin_small"
-                android:drawableLeft="@drawable/ic_devices_other_blue_700_24dp"
-                android:gravity="center_vertical"
-                android:text="@string/setting_device" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_device"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/view_margin_normal"
-                android:layout_marginVertical="@dimen/view_margin_small" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/view_margin_normal">
-                <Button
-                    android:id="@+id/btn_save"
-                    style="@style/RadiusButton"
-                    android:text="@string/setting_set"/>
-                <ProgressBar
-                    android:id="@+id/progress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"/>
-            </FrameLayout>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
