用户权限管理

--- a/app/src/main/res/drawable/ic_user_normal.xml
+++ b/app/src/main/res/drawable/ic_user_normal.xml
@@ -1,29 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="1024dp"
-    android:height="1024dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
-
-    <path
-        android:fillColor="#DEEDFF"
-        android:pathData="M512 512m-448 0a448 448 0 1 0 896 0 448 448 0 1 0-896 0Z" />
-    <path
-        android:fillColor="#F6CAA9"
-        android:pathData="M698.601 459.803c0 113.867-82.008 206.175-183.169 206.175-101.166 0-183.173-92.308-183.173-206.175s82.008-206.175 183.173-206.175c101.162 0 183.169 92.308 183.169 206.175" />
-    <path
-        android:fillColor="#F6CAA9"
-        android:pathData="M444.267 633.559h140.494v116.189H444.267zM355.412 471.889c0 17.024-12.598 30.827-28.142 30.827-15.54 0-28.138-13.803-28.138-30.827s12.598-30.827 28.138-30.827c15.544 0 28.142 13.803 28.142 30.827M731.347 471.51c0 17.024-12.598 30.827-28.142 30.827-15.54 0-28.138-13.803-28.138-30.827s12.598-30.827 28.138-30.827c15.544 0 28.142 13.803 28.142 30.827" />
-    <path
-        android:fillColor="#ECB485"
-        android:pathData="M444.64 650.21s26.599 13.69 65.192 13.69c45.332 1.852 74.928-13.32 74.928-13.32v13.69s-49.83 26.644-72.309 26.644-68.185-31.452-68.185-31.452l0.374-9.252zM491.789 202.69s-123.951 12.354-125.235 93.492 95.711 96.675 131.655 105.548c35.94 8.877 134.78 20.287 192.54-73.529 0 0-15.842-36.785-24.507-62.455-3.852-6.656 6.216 11.426-28.44-10.443-34.66-21.87-81.191-57.685-146.013-52.613" />
-    <path
-        android:fillColor="#3F3F3F"
-        android:pathData="M405.011 247.014s-90.366 15.05-95.498 95.911c-5.136 80.865 9.209 102.218 9.209 102.218s20.379-0.063 25.51 30.407c0 0 9.435 5.593 10.272 0 1.386-9.289-8.265-53.435 10.987-94.454 19.133-40.758 37.56-46.582 37.56-46.582l1.96-87.5zM642.565 335.374s24.175 31.154 28.346 62.288c3.537 26.413 8.474 76.086 8.474 76.086s6.739 4.758 11.552-6.656c4.813-11.409 3.571-22.81 8.053-25.775 23.648-15.659 17.479-81.499 16.208-88.445-5.374-29.403-29.762-76.636-29.762-76.636l-42.871 59.138z" />
-    <path
-        android:fillColor="#3F3F3F"
-        android:pathData="M488.662 175.412s-128.262 5.27-129.546 90.557 100.022 109.336 135.966 118.662c35.94 9.327 134.78 21.32 192.54-77.291 0 0 14.443-44.642 5.778-71.626-3.852-6.996-24.069 17.989-58.725-4.997-34.66-22.988-81.191-60.634-146.013-55.305" />
-    <path
-        android:fillColor="#238AFF"
-        android:pathData="M839.09 818.125c-22.797-17.901-65.726-44.279-108.291-64.977-69.091-33.594-145.988-48.64-145.988-48.64l-0.059 2.28c-5.604 5.98-32.628 32.62-69.865 32.62-36.646 0-64.069-25.007-70.405-31.314l-0.332-3.238s-74.052 10.15-143.143 43.744c-47.28 22.987-95.003 52.987-115.092 70.592C267.611 905.879 383.483 960 512 960c129.044 0 245.341-54.564 327.09-141.875z" />
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#CE6C21" android:pathData="M77.7,370.5c9.6,-8.5 30.9,-25.4 95.5,-55.9l46.5,64.5l36.3,-34.5l36.3,34.5l46.5,-64.5c64.5,30.5 85.9,47.4 95.5,55.9c2.9,2.6 5.6,6.3 8.1,10.9c18.7,-31.9 29.4,-69.1 29.4,-108.7C471.7,153.6 375.1,57 256,57C136.9,57 40.3,153.6 40.3,272.8c0,39.6 10.7,76.8 29.4,108.7C72.1,376.8 74.8,373.1 77.7,370.5z"/>
+    <path android:fillColor="#DCC5A1" android:pathData="M209.7,220.5v105.7c12.7,15 29.5,22.8 46.3,23V177.7C232.9,177.7 209.7,192 209.7,220.5z"/>
+    <path android:fillColor="#EDD9B4" android:pathData="M256,177.7v171.4c16.8,0.1 33.5,-7.4 46.3,-23V220.5C302.3,192 279.1,177.7 256,177.7z"/>
+    <path android:fillColor="#BC9F82" android:fillType="evenOdd" android:pathData="M302.3,213.2v70.7c-17.5,12.8 -34.4,19.9 -46.3,19.9c-11.9,0 -28.8,-7.2 -46.3,-19.9v-70.7C209.7,156.1 302.3,156.1 302.3,213.2"/>
+    <path android:fillColor="#FFFFFF" android:fillType="evenOdd" android:pathData="M206.2,209.7c13,10.2 86.6,9.7 99.6,0C294.5,263.5 221.2,265.1 206.2,209.7"/>
+    <path android:fillColor="#DCC5A1" android:pathData="M256,23.5c-87.7,0 -108,59.8 -107.3,114.6c-3.9,-3.2 -8.2,-4.6 -12,-3.3c-8.2,2.7 -11,16.3 -6.4,30.4c4.6,14.1 15,23.3 23.2,20.7c0.2,-0.1 0.4,-0.2 0.5,-0.2c4.3,21 10.1,36.6 12.7,40.5c11.2,16.5 64.2,60.1 89.3,60.1h0L256,23.5L256,23.5z"/>
+    <path android:fillColor="#EDD9B4" android:pathData="M374.9,134.8c-3.7,-1.2 -7.8,0 -11.6,3C364,83.1 343.5,23.5 256,23.5v262.8c25.1,0 78.1,-43.7 89.3,-60.1c2.6,-3.9 8.4,-19.4 12.7,-40.3c0.1,0 0.1,0.1 0.2,0.1c8.2,2.7 18.5,-6.6 23.2,-20.7C385.9,151.1 383.1,137.5 374.9,134.8z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M302.3,298l0,0l-46.3,46.6l36.3,34.5l46.5,-64.5l0,0z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M209.7,298l0,0l46.3,46.6l-36.3,34.5l-46.5,-64.5l0,0z"/>
+    <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M256,23.5c-108.6,0 -107.5,58.2 -107.4,112.3c0.1,43.1 13.6,83.7 18.1,90.3c11.2,16.5 64.2,60.1 89.3,60.1c25.1,0 78.1,-43.7 89.3,-60.1c4.5,-6.6 18,-47.2 18.1,-90.3C363.5,81.7 364.6,23.5 256,23.5zM353.8,169c-4.3,39.1 -5.9,45.9 -17.9,61.2c-11.9,15.3 -40.8,31.4 -56.9,39.1c-15.4,7.3 -6.8,-12.5 -23,-14.3c-16.1,1.9 -7.6,21.6 -23,14.3c-16.2,-7.7 -45.1,-23.8 -56.9,-39.1c-11.9,-15.3 -13.6,-22.1 -17.9,-61.2c-4.3,-39.1 0.8,-109.7 26.3,-108c25.5,1.7 41.7,6 71.4,6c29.8,0 45.9,-4.2 71.4,-6C352.9,59.3 358,129.8 353.8,169z"/>
+    <path android:fillColor="#342214" android:pathData="M215.3,142.2c5.5,0 10,5.1 10,11.3c0,6.3 -4.5,11.3 -10,11.3c-5.5,0 -10,-5.1 -10,-11.3C205.3,147.2 209.8,142.2 215.3,142.2"/>
+    <path android:fillColor="#342214" android:pathData="M296.3,142.2c5.5,0 10,5.1 10,11.3c0,6.3 -4.5,11.3 -10,11.3c-5.5,0 -10,-5.1 -10,-11.3C286.3,147.2 290.8,142.2 296.3,142.2"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M235.2,213.8c3.5,7.8 11.4,13.3 20.6,13.3c9.2,0 17,-5.5 20.6,-13.3H235.2z"/>
+    <path android:fillColor="#BE1E2D" android:pathData="M256,488.5l0,0l0,0z"/>
+    <path android:fillColor="#BE1E2D" android:pathData="M376.7,435.6c0,0 0.7,5.5 1.9,14.6c26,-18 47.8,-41.5 63.8,-68.8c-2.5,-4.6 -5.2,-8.4 -8.1,-10.9c-9.6,-8.5 -30.9,-25.4 -95.5,-55.9l-46.5,64.5L256,344.6l-36.3,34.5l-46.5,-64.5c-64.6,30.5 -85.9,47.4 -95.5,55.9c-2.9,2.6 -5.6,6.3 -8.1,10.9c16,27.4 37.8,50.9 63.8,68.8c1.2,-9.1 1.9,-14.6 1.9,-14.6s0,5.9 0,16c34.4,23.3 76,36.9 120.6,36.9c0,0 0,0 0,0c44.7,0 86.2,-13.6 120.7,-36.9C376.7,441.6 376.7,435.6 376.7,435.6z"/>
+    <path android:fillColor="#AC1927" android:pathData="M135.3,435.6c0,0 -0.7,5.5 -1.9,14.6c0.6,0.4 1.3,0.9 1.9,1.3C135.3,441.6 135.3,435.6 135.3,435.6z"/>
+    <path android:fillColor="#AC1927" android:pathData="M376.7,451.6c0.7,-0.4 1.3,-0.9 1.9,-1.3c-1.2,-9.1 -1.9,-14.6 -1.9,-14.6S376.7,441.6 376.7,451.6z"/>
 </vector>
