--- a/app/src/main/res/layout/fragment_login_phone.xml
+++ b/app/src/main/res/layout/fragment_login_phone.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_phone_number"
+            android:inputType="number"
             android:singleLine="true"/>
     </android.support.design.widget.TextInputLayout>
     <LinearLayout
@@ -28,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_code"
+                android:inputType="number"
                 android:singleLine="true"/>
         </android.support.design.widget.TextInputLayout>
         <TextView
