--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -19,18 +19,30 @@
             android:layout_marginHorizontal="@dimen/view_margin_normal" />
 
         <TextView
-            android:id="@+id/text_user"
+            android:id="@+id/text_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:textColor="@color/colorNormal"
-            android:textSize="@dimen/font_big" />
+            android:textSize="@dimen/font_big"
+            android:text="徐海生"/>
+
+        <TextView
+            android:id="@+id/text_phone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/colorNormal"
+            android:textSize="@dimen/font_big"
+            android:text="18759282157"/>
 
         <TextView
             android:id="@+id/text_level"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginHorizontal="@dimen/view_margin_normal"
             android:layout_gravity="center_vertical"
             android:textColor="@color/colorGrayNormal"
