--- a/app/src/main/res/layout/activity_user_manage.xml
+++ b/app/src/main/res/layout/activity_user_manage.xml
@@ -32,6 +32,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
+                android:inputType="text"
                 android:layout_weight="3"/>
         </LinearLayout>
         <LinearLayout
