--- a/app/src/main/res/layout/fragment_login_account.xml
+++ b/app/src/main/res/layout/fragment_login_account.xml
@@ -17,43 +17,37 @@
             android:hint="@string/login_username"
             android:singleLine="true"/>
     </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/login_password"
-            android:inputType="textPassword"
-            android:singleLine="true"/>
-    </android.support.design.widget.TextInputLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginVertical="@dimen/view_margin_normal">
-        <TextView
-            android:id="@+id/text_failure"
+        android:orientation="horizontal">
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/login_failure"
-            android:textColor="@color/colorAccent"
-            android:visibility="invisible"/>
+            android:layout_weight="2.5">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edit_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/login_password"
+                android:inputType="textPassword"
+                android:singleLine="true"/>
+        </android.support.design.widget.TextInputLayout>
         <Switch
             android:id="@+id/switch_remember"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:switchPadding="@dimen/view_padding_normal"
             android:textColor="@color/colorSecondaryText"
-            android:layout_gravity="right|end"
+            android:layout_gravity="right|center_vertical|end"
             android:text="@string/login_remember"/>
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/view_margin_normal">
         <Button
             android:id="@+id/btn_login"
             style="@style/RadiusButton"
