--- a/app/src/main/res/layout/content_tab_overview.xml
+++ b/app/src/main/res/layout/content_tab_overview.xml
@@ -11,4 +11,5 @@
         android:id="@+id/recyclerView_alarm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+    <include layout="@layout/item_qrcode"/>
 </LinearLayout>
